increased Jacoco coverage